--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,5 +7,17 @@ spring:
     password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
+  security:
+    loginType: JSON
+
+    # 身份开启 spring security 当值为true 则需要进行认证登录操作
+    security:
+      basic:
+        enabled: true
+
+
+
+
+
 
 
